--- a/TanksModeling/Base.lproj/Main.storyboard
+++ b/TanksModeling/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="736" height="65.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="lM5-07-Foo">
+                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="lM5-07-Foo">
                                                     <rect key="frame" x="622" y="18.333333333333329" width="94" height="29"/>
                                                     <connections>
                                                         <action selector="stepperValueChanged:" destination="a5t-OB-b1J" eventType="valueChanged" id="Pyu-fa-NEb"/>
@@ -99,6 +99,35 @@
                                         <connections>
                                             <outlet property="countLabel" destination="s1m-s1-cMK" id="BHr-3t-ago"/>
                                             <outlet property="countStepper" destination="lM5-07-Foo" id="Jr7-in-W3n"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldTableViewCellIdentifier" rowHeight="65" id="jUl-m4-fse" customClass="TextFieldTableViewCell" customModule="TanksModeling" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="94" width="736" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jUl-m4-fse" id="O2L-iA-bow">
+                                            <rect key="frame" x="0.0" y="0.0" width="736" height="64.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1000" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dB6-pu-s1W">
+                                                    <rect key="frame" x="573" y="20.333333333333329" width="143" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="143" id="lrO-9o-AD0"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <connections>
+                                                        <action selector="countTextFieldDidChange:" destination="jUl-m4-fse" eventType="editingChanged" id="RLu-cs-9Em"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dB6-pu-s1W" firstAttribute="centerY" secondItem="O2L-iA-bow" secondAttribute="centerY" id="44o-Zd-EmD"/>
+                                                <constraint firstAttribute="trailing" secondItem="dB6-pu-s1W" secondAttribute="trailing" constant="20" id="6mQ-Vr-OEp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="countTextField" destination="dB6-pu-s1W" id="rtK-Tu-chc"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -126,7 +155,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VLL-hj-Llw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1511" y="-693"/>
+            <point key="canvasLocation" x="1510.5978260869567" y="-694.20289855072474"/>
         </scene>
         <!--Моделирование-->
         <scene sceneID="tne-QT-ifu">
@@ -181,7 +210,8 @@
                         <outlet property="sceneBackgroundView" destination="lwd-A4-Wmm" id="o5o-Wb-m7U"/>
                         <outlet property="sceneHeightConstraint" destination="DUd-2x-sfC" id="PJ5-xK-kjr"/>
                         <outlet property="sceneLightView" destination="Iet-56-80Z" id="OUf-up-dsD"/>
-                        <outlet property="scrollView" destination="dLK-ZK-ygN" id="GEb-hV-Mi7"/>
+                        <outlet property="sceneScrollView" destination="dLK-ZK-ygN" id="GEb-hV-Mi7"/>
+                        <outlet property="sceneWidthConstraint" destination="vT5-wc-t8G" id="qcd-Vo-Dkk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -225,7 +255,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="736" height="65.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="cvy-8w-0pg">
+                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10000" translatesAutoresizingMaskIntoConstraints="NO" id="cvy-8w-0pg">
                                                     <rect key="frame" x="622" y="18.333333333333329" width="94" height="29"/>
                                                     <connections>
                                                         <action selector="stepperValueChanged:" destination="5Xj-yZ-HcI" eventType="valueChanged" id="RnM-1i-IE3"/>
@@ -248,6 +278,35 @@
                                         <connections>
                                             <outlet property="countLabel" destination="9c5-98-boy" id="0Mc-8p-0r9"/>
                                             <outlet property="countStepper" destination="cvy-8w-0pg" id="a2m-6Y-97E"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldTableViewCellIdentifier" rowHeight="65" id="8wi-p5-6Bg" customClass="TextFieldTableViewCell" customModule="TanksModeling" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="94" width="736" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8wi-p5-6Bg" id="HiK-1f-RWb">
+                                            <rect key="frame" x="0.0" y="0.0" width="736" height="64.666666666666671"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1000" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="whz-id-prR">
+                                                    <rect key="frame" x="573" y="20.333333333333329" width="143" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="143" id="uve-qn-sgr"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                    <connections>
+                                                        <action selector="countTextFieldDidChange:" destination="8wi-p5-6Bg" eventType="editingChanged" id="6g3-LF-qMH"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="whz-id-prR" secondAttribute="trailing" constant="20" id="JWF-NI-ZMr"/>
+                                                <constraint firstItem="whz-id-prR" firstAttribute="centerY" secondItem="HiK-1f-RWb" secondAttribute="centerY" id="WUs-Ph-iH7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="countTextField" destination="whz-id-prR" id="0hx-jJ-BIL"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
