--- a/TanksModeling/Base.lproj/Main.storyboard
+++ b/TanksModeling/Base.lproj/Main.storyboard
@@ -57,6 +57,72 @@
             </objects>
             <point key="canvasLocation" x="809.51086956521749" y="-694.20289855072474"/>
         </scene>
+        <!--Добро пожаловать-->
+        <scene sceneID="5Tb-PE-7Xp">
+            <objects>
+                <viewController id="dQP-CF-VlP" customClass="WelcomeViewController" customModule="TanksModeling" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HWv-Nw-fDv">
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tanks" translatesAutoresizingMaskIntoConstraints="NO" id="jYJ-61-PNh">
+                                <rect key="frame" x="70" y="147.66666666666666" width="596" height="159.99999999999997"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jYJ-61-PNh" secondAttribute="height" multiplier="149:40" id="D6M-K0-W8f"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TkI-nN-cN0">
+                                <rect key="frame" x="268" y="337.66666666666669" width="200" height="45"/>
+                                <color key="backgroundColor" red="0.33703166246414185" green="0.33289065957069397" blue="0.28346031904220581" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="JgH-mK-773"/>
+                                    <constraint firstAttribute="height" constant="45" id="RjK-IA-EWe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Настройки">
+                                    <color key="titleColor" red="0.73306471109390259" green="0.72905063629150391" blue="0.68792510032653809" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="cpI-Ql-Zhh" kind="show" id="rL3-Wo-Q7l"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seE-vy-JHp">
+                                <rect key="frame" x="268" y="397.66666666666669" width="200" height="45"/>
+                                <color key="backgroundColor" red="0.33703166246414185" green="0.33289065957069397" blue="0.28346031904220581" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Моделирование">
+                                    <color key="titleColor" red="0.73306471110000004" green="0.7290506363" blue="0.68792510029999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="ACB-DX-cdG"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.45882352941176469" green="0.48627450980392156" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="seE-vy-JHp" firstAttribute="centerX" secondItem="TkI-nN-cN0" secondAttribute="centerX" id="0Gu-Tt-drT"/>
+                            <constraint firstItem="seE-vy-JHp" firstAttribute="top" secondItem="TkI-nN-cN0" secondAttribute="bottom" constant="15" id="4Xa-QN-HzG"/>
+                            <constraint firstItem="TkI-nN-cN0" firstAttribute="width" secondItem="seE-vy-JHp" secondAttribute="width" id="6in-Jl-zXL"/>
+                            <constraint firstItem="TkI-nN-cN0" firstAttribute="centerX" secondItem="Aq7-Ew-22C" secondAttribute="centerX" id="PPT-4E-aWI"/>
+                            <constraint firstItem="TkI-nN-cN0" firstAttribute="top" secondItem="jYJ-61-PNh" secondAttribute="bottom" constant="30" id="SPh-Pj-n1p"/>
+                            <constraint firstItem="jYJ-61-PNh" firstAttribute="centerX" secondItem="Aq7-Ew-22C" secondAttribute="centerX" id="TQs-z5-Lzw"/>
+                            <constraint firstItem="jYJ-61-PNh" firstAttribute="width" secondItem="jYJ-61-PNh" secondAttribute="height" multiplier="149:40" id="WFZ-KM-JVO"/>
+                            <constraint firstItem="jYJ-61-PNh" firstAttribute="centerY" secondItem="HWv-Nw-fDv" secondAttribute="centerY" multiplier="1.1" id="XPg-18-S8B"/>
+                            <constraint firstItem="TkI-nN-cN0" firstAttribute="height" secondItem="seE-vy-JHp" secondAttribute="height" id="ZJP-DD-HFh"/>
+                            <constraint firstItem="Aq7-Ew-22C" firstAttribute="trailing" secondItem="jYJ-61-PNh" secondAttribute="trailing" constant="70" id="wmA-wm-T58"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Aq7-Ew-22C"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Добро пожаловать" id="4rv-1v-F9Q"/>
+                    <connections>
+                        <outlet property="imageCenterYConstraint" destination="XPg-18-S8B" id="6Tv-Zl-keV"/>
+                        <outlet property="imageTrailingConstraint" destination="wmA-wm-T58" id="yKB-wl-twO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xv8-Be-28d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1510.5978260869567" y="-1594.2028985507247"/>
+        </scene>
         <!--Сторона А-->
         <scene sceneID="x3j-GW-Xoc">
             <objects>
@@ -155,7 +221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VLL-hj-Llw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1510.5978260869567" y="-694.20289855072474"/>
+            <point key="canvasLocation" x="810" y="206"/>
         </scene>
         <!--Моделирование-->
         <scene sceneID="tne-QT-ifu">
@@ -216,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2213" y="206"/>
+            <point key="canvasLocation" x="1533" y="1000"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ugg-S5-yQG">
@@ -226,10 +292,16 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="X4G-op-tqA">
                         <rect key="frame" x="0.0" y="0.0" width="736" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.690623939037323" green="0.69769316911697388" blue="0.6608540415763855" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.29901406168937683" green="0.31314083933830261" blue="0.25159761309623718" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                            <color key="textColor" red="0.6624833345413208" green="0.65845960378646851" blue="0.61733651161193848" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="cpI-Ql-Zhh" kind="relationship" relationship="rootViewController" id="aDV-cE-OiP"/>
+                        <segue destination="dQP-CF-VlP" kind="relationship" relationship="rootViewController" id="cm2-c6-9y2"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XTS-Yv-bQu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -334,7 +406,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qkg-YM-AEb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2214" y="-694"/>
+            <point key="canvasLocation" x="810" y="1001"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tanks" width="2348" height="618"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ACB-DX-cdG"/>
+    </inferredMetricsTieBreakers>
 </document>
